--- a/5_software.tex
+++ b/5_software.tex
@@ -11,4 +11,4 @@ The Model Manager has three components that correspond function $F$: the Traffic
 
 The Solver module serves as an interface to plug in solution algorithms for DTA. The SOLVER works in a loop in which it generates candidate demand assignments, and expects to be given the corresponding network path costs. This loop continues until an equilibrium demand assignment is reached. The Solver interface allows to incorporate different DTA solution algorithm. We included three solver algorithms: the MSA, the FW, and the EPM, which can be applied depending on the $F$ function properties. 
 
-The advantage of our modular software framework is that it can be easily extended to address different traffic assignment problems by including new traffic models, cost functions, and solver algorithms. For example, the framework has a travel time based cost function. A user can add an energy or emission based cost function. For problems, such as simulation-based DTA problems, where the traffic model is tightly coupled with the cost function evaluation, a user can integrate implementation of the $F$ function without having to write the Traffic model, Cost Function and Sum modules . The complete documentation on software framework, with installations instructions can be found at \cite{ta_solver}
+The advantage of our modular software framework is that it can be easily extended to address different traffic assignment problems by including new traffic models, cost functions, and solver algorithms. For example, the framework has a travel time based cost function. A user can add an energy or emission based cost function. For problems, such as simulation-based DTA problems, where the traffic model is tightly coupled with the cost function evaluation, a user can integrate implementation of the $F$ function without having to write the Traffic model, Cost Function and Sum modules. The complete documentation on software framework, with installations instructions can be found at \cite{ta_solver}.
