--- a/Old_Text.tex
+++ b/Old_Text.tex
@@ -29,3 +29,34 @@ Contributions:
 \end{enumerate}
 
 Finally, we also designed the whole Model Manager component as an interface, enabling a user to integrate an implementation of the $F$ composition function without having to use the Traffic model, Cost Function and Sum modules. This is useful for problems, such as simulation-based DTA problems, where the traffic model is tightly coupled with the cost function evaluation.
+
+\author{\IEEEauthorblockN{ Juliette Ugirumurera}
+\IEEEauthorblockA{\textit{Computational Research Division} \\
+\textit{Lawrence Berkeley National Laboratory}\\
+Berkeley, California \\
+ugirumurera@lbl.gov}
+\and
+\IEEEauthorblockN{Gabriel Gomes}
+\IEEEauthorblockA{\textit{Partners for Advanced Transportation Technology} \\
+\textit{University of California Berkeley}\\
+Berkeley, California \\
+gomes@path.berkeley.edu}
+\and
+\IEEEauthorblockN{Emily Porter}
+\IEEEauthorblockA{\textit{Department of Civil and Environmental Engineering} \\
+\textit{University of California Berkeley}\\
+Berkeley, California \\
+emily.porter@berkeley.edu}
+\and
+\IEEEauthorblockN{Xiaoye S. Li }
+\IEEEauthorblockA{\textit{Computational Research Division} \\
+\textit{Lawrence Berkeley National Laborator}\\
+Berkeley, California \\
+ xsli@lbl.gov}
+\and
+\IEEEauthorblockN{Alexandre Bayen}
+\IEEEauthorblockA{\textit{Department of Electrical Engineering and Computer Science} \\
+\textit{University of California Berkeley}\\
+Berkeley, California \\
+bayen@berkeley.edu}
+}
