--- a/citation.bib
+++ b/citation.bib
@@ -301,3 +301,10 @@
   year={2016},
   organization={IEEE}
 }
+
+@book{patriksson2015traffic,
+  title={The traffic assignment problem: models and methods},
+  author={Patriksson, Michael},
+  year={2015},
+  publisher={Courier Dover Publications}
+}
