--- a/main.tex
+++ b/main.tex
@@ -10,36 +10,12 @@
  U.S.~Department of Energy under contract No.~DE-AC02-05CH11231.}
 }
 
-\author{\IEEEauthorblockN{ Juliette Ugirumurera}
-\IEEEauthorblockA{\textit{Computational Research Division} \\
-\textit{Lawrence Berkeley National Laboratory}\\
-Berkeley, California \\
-ugirumurera@lbl.gov}
-\and
-\IEEEauthorblockN{Gabriel Gomes}
-\IEEEauthorblockA{\textit{Partners for Advanced Transportation Technology} \\
-\textit{University of California Berkeley}\\
-Berkeley, California \\
-gomes@path.berkeley.edu}
-\and
-\IEEEauthorblockN{Emily Porter}
-\IEEEauthorblockA{\textit{Department of Civil and Environmental Engineering} \\
-\textit{University of California Berkeley}\\
-Berkeley, California \\
-emily.porter@berkeley.edu}
-\and
-\IEEEauthorblockN{Xiaoye S. Li }
-\IEEEauthorblockA{\textit{Computational Research Division} \\
-\textit{Lawrence Berkeley National Laborator}\\
-Berkeley, California \\
- xsli@lbl.gov}
-\and
-\IEEEauthorblockN{Alexandre Bayen}
-\IEEEauthorblockA{\textit{Department of Electrical Engineering and Computer Science} \\
-\textit{University of California Berkeley}\\
-Berkeley, California \\
-bayen@berkeley.edu}
-}
+\author{\IEEEauthorblockN{Juliette Ugirumurera\IEEEauthorrefmark{1}, Gabriel Gomes\IEEEauthorrefmark{2},
+Emily Porter\IEEEauthorrefmark{3}, Xiaoye S. Li\IEEEauthorrefmark{1}, and Alexandre Bayen\IEEEauthorrefmark{2}\IEEEauthorrefmark{4}}\\
+\IEEEauthorblockA{\IEEEauthorrefmark{1}Computational Research Division,Lawrence Berkeley Nationa Lab}
+\IEEEauthorblockA{\IEEEauthorrefmark{2} Institute of Transportation Studies, University of California at Berkeley}
+\IEEEauthorblockA{\IEEEauthorrefmark{3}Department of Civil and Environmental Engineering,University of California at Berkeley}
+\IEEEauthorblockA{\IEEEauthorrefmark{4}Department of Electrical Engineering and Computer Science,University of California at Berkeley}}
 
 \maketitle
 
@@ -77,11 +53,12 @@ bayen@berkeley.edu}
 
 \section{Conclusions}
 \label{sec:conclusions}
+\input{_conclusion.tex}
 
 \section*{Acknowledgment}
 
 
-\bibliographystyle{abbrv}
+\bibliographystyle{unsrt}
 \bibliography{citation.bib}
 
 
