--- a/1_introduction.tex
+++ b/1_introduction.tex
@@ -26,17 +26,17 @@ There are many other programs, both commercial and shared, that solve dynamic tr
 \end{table}
 
 \begin{itemize}
-\item DTALite \cite{zhou2014dtalite} uses a mesoscopic agent based model with link flow dynamics based on Newell’s simplified kinematics wave model, a spatial queue model, and a point queue model. Node dynamics are governed by signal timing, Daganzo’s priority based merging, and flow conservation. Initial routing is based on time dependent shortest paths although utility theory and other traffic assignment rules can also be incorporated. DTALite uses an approximate gradient method solver which uses a queue model to calculate link flow–density change due to incoming path flow change.is a DTA software package with a queue-based traffic simulator. DTALite uses agent-based algorithm to calculate dynamic traffic equilibrium.
+\item DTALite \cite{zhou2014dtalite} uses a mesoscopic agent based model with link flow dynamics based on Newell’s simplified kinematics wave model, a spatial queue model, and a point queue model. Node dynamics are governed by signal timing, Daganzo’s priority based merging, and flow conservation. Initial routing is based on time dependent shortest paths although utility theory and other traffic assignment rules can also be incorporated. DTALite uses an approximate gradient method solver which uses a queue model to calculate link flow–density change due to incoming path flow change. DTALite uses agent-based algorithm to calculate dynamic traffic equilibrium.
 \ggnote{\url{https://www.tandfonline.com/doi/full/10.1080/23311916.2014.961345#} Mesoscopic model, assumes link flows are observed, solve an optimization problem to match path flows to observed link flows (Section 4.1 in reference?). Has no equilibrium concept} 
 \item Dynameq uses a discrete event traffic flow model in contrast to the more typical discrete time based models. The model is based on car following, lane changing, and gap acceptance. Initial routing is done by time dependent shortest path and convergence to experienced travel time dynamic user equilibrium is sought. Vehicles do not change paths enroute, instead they follow initially designated routes. Two solver algorithms are employed: 1) the method of successive averages and, 2) a heuristic adaptation of a gradient based method.   
 \item DynaMIT-P \cite{DynaMIT,ben2001dynamit} is a mesoscopic model based on speed-density relationships and queuing theory. Route choice behavior is based on utility theory and a path size logit model is used. Joint estimation of unknown state space parameters (including OD flow, route choice model parameters, traffic dynamic model parameters, and segment capacities) is conducted using an Extended Kalman Filter and other variations of Kalman filtering.   \ggnote{Section 3: \url{https://www.sciencedirect.com/science/article/pii/S1474667017438572}}
 \item DYNASMART-P \cite{DYNASMART,mahmassani2004dynasmart} is a simulation-based DTA tool based on the the mesoscopic traffic simulator DYNASMART. 
-\item DynusT \cite{chiu2011dynust} uses the “anisotropic mesoscopic model” for flow dynamics which is similar to a stimulus-response type of car following mode in which the two defining features are 1) a vehicle’s speed is influenced by vehicles in front of it (in same lane and adjacent lanes), and 2) the influence of downstream traffic decreases as distance increases. The time dependent shortest path algorithm determines the time-dependent shortest path for each departure time. The traffic assignment assigns a portion of the vehicles departing at the same time between the same OD pair to the time-dependent least-travel time path following the “route swapping” type of traffic assignment procedure. The solution algorithm is based on an adaptation of gradient projection in which the step size is based on “relative gap” which is a measure of the difference between experienced travel time and time dependent shortest path travel time. 
+\item DynusT \cite{chiu2011dynust} uses the “anisotropic mesoscopic model” for flow dynamics which is similar to a stimulus-response type of car following model in which the two defining features are 1) a vehicle’s speed is influenced by vehicles in front of it (in same lane and adjacent lanes), and 2) the influence of downstream traffic decreases as distance increases. The time dependent shortest path algorithm determines the time-dependent shortest path for each departure time. The traffic assignment assigns a portion of the vehicles departing at the same time between the same OD pair to the time-dependent least-travel time path following the “route swapping” type of traffic assignment procedure. The solution algorithm is based on an adaptation of gradient projection in which the step size is based on “relative gap” which is a measure of the difference between experienced travel time and time dependent shortest path travel time. 
 \item INTEGRATION \cite{rakha2012integration} uses a microscopic agent based flow model based on speed-spacing relationships, a speed differential between a vehicle and the vehicle immediately ahead of it, and an acceleration model (variable power vehicle dynamics model) that considers the vehicle’s tractive force. The authors of INTEGRATION jointly consider routing and solution algorithms. Their software incorporates: 1) time dependent method of successive averages, 2) time dependent sub-population feedback assignment, 3) time dependent agent feedback assignment, 4) time dependent dynamic traffic assignment, 5) time dependent Frank-Wolfe algorithm, 6) time dependent external routing, and 7) distance based routing.  
 
 \end{itemize}
 
-In contrast to these, the software described here does not prescribe the model, cost-function, or numerical method, but rather serves as a test platform for comparing different options, both in terms of computation and the solutions they produce. The code can be found here \cite{ta_solver}.
+In contrast to these, the software described here does not prescribe the model, cost-function, or numerical method, but rather serves as a platform for comparing different options, both in terms of computation and the solutions they produce. The software presently includes a static model, two dynamic models: the cell-based model and the Merchan-Nemhouser model, a travel time based cost-function, and three numerical algorithms: the Frank-Wolfe algorithm, the method of successive averages, and the extra-projection method. The code can be found here \cite{ta_solver}. \ggnote{Briefly mention the items we've implemented so far - addressed, Juliette}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
